I corrected bottom padding on mobile in two sections

--- a/src/app/(pages)/checkout/CheckoutPage/ShippingMethods/index.module.scss
+++ b/src/app/(pages)/checkout/CheckoutPage/ShippingMethods/index.module.scss
@@ -19,7 +19,7 @@
   width: 50%;
   @include small-break {
     width: 100%;
-    padding-bottom: 0;
+    padding-bottom: 24px;
     margin-bottom: 16px;
   }
 }
